PeriodicTable.css
body {
    display: grid;
    overflow-x: scroll;
    overflow-y: scroll;
}

#table {
    display: grid;
    grid-template-columns: repeat(3, 1fr) 0.1fr repeat(15, 1fr);
    grid-template-rows: repeat(7, 1fr) 0.2fr repeat(2, 1fr);
    border: 2px solid black;
    width: 90vw;
    gap: 3px;
    padding: 9px;
}

.element {
    border: 1px solid black;
    display: grid;
    grid-template-rows: 0.2fr 1.7fr 0.7fr;
    align-items: center;
    padding: 1px;
    width: 95%;
    height: 95%;
    gap: 2px;
    user-select: none;
}

.LaLu {
    display: grid;
    border: 1px solid black;
    background-color: #63ffb9;
    font-size: 80%;
    width: 95%;
    height: 95%;
    padding: 1px;
    align-items: center;
    justify-content: center;
    user-select: none;
}

.AcLr {
    display: grid;
    border: 1px solid black;
    background-color: #ff63dd;
    font-size: 80%;
    width: 95%;
    height: 95%;
    padding: 1px;
    align-items: center;
    justify-content: center;
    user-select: none;
}

.an {
    text-align: right;
    font-size: 0.8vw;
    justify-content: center;
}
.es {
    display: flex;
    text-align: center;
    justify-self: center;
    font-size: 1.7vw;
}
.am {
    display: flex;
    text-align: center;
    justify-content: center;
    font-size: 1vw;
}

